--- a/components/LatestProducts/LatestProduct.scss
+++ b/components/LatestProducts/LatestProduct.scss
@@ -157,6 +157,7 @@
     a, .skeleton-card {
         display: block;
         width: 100%;
+        height: 100%;
         text-decoration: none;
         color: inherit;
         box-sizing: border-box;
