--- a/pages/Cart/Cart.scss
+++ b/pages/Cart/Cart.scss
@@ -687,7 +687,7 @@
           .btn-clear-cart {
             background: none;
             border: none;
-            color: #007185; // Amazon blue
+            color: #D33131; // Brand Red
             font-size: 0.85rem;
             padding: 0;
             font-weight: 500;
@@ -1030,7 +1030,7 @@
                   .btn-delete {
                     border: none;
                     background: transparent; 
-                    color: #007185; // Amazon link color
+                    color: #D33131; // Brand Red
                     font-size: 0.85rem;
                     padding: 0.5rem;
                     
