--- a/pages/Checkout/CheckoutAddress.scss
+++ b/pages/Checkout/CheckoutAddress.scss
@@ -281,7 +281,7 @@
                         font-weight: 600;
                     }
 
-                    input, textarea {
+                    input, textarea, select {
                         padding: 0.8rem;
                         border: 1px solid #d4d5d9;
                         border-radius: 4px;
