--- a/pages/Checkout/CheckoutAddress.scss
+++ b/pages/Checkout/CheckoutAddress.scss
@@ -391,6 +391,11 @@
         &.green {
           color: #03a685;
         }
+
+        .free {
+            color: #03a685;
+            font-weight: 700;
+        }
         
         &.total {
             font-weight: 700;
@@ -405,7 +410,16 @@
         margin: 0.5rem 0;
       }
 
-      .btn-continue-blob {
+        .skeleton-price {
+            width: 60px;
+            height: 1rem;
+            background: #eee;
+            border-radius: 4px;
+            display: inline-block;
+            animation: shimmer 1.5s infinite linear;
+        }
+
+       .btn-continue-blob {
         width: 100%;
         background: #D33131;
         color: white;
@@ -421,6 +435,11 @@
         
         &:hover {
             background: #B72A2A;
+        }
+        
+        &.disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
         }
       }
     }
