--- a/pages/Product/Product.scss
+++ b/pages/Product/Product.scss
@@ -3,7 +3,7 @@
   width: 100%;
   padding: 2rem 1rem;
   /* account for fixed header height (70px desktop, 60px mobile) */
-  padding-top: calc(70px + 2rem);
+  padding-top: 2rem;
   background: linear-gradient(135deg, #f8f9fa 0%, #ffffff 100%);
   min-height: 100vh;
 
