--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -1,3 +1,10 @@
+.header-container {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+}
+
 .header {
   position: relative;
 }
@@ -7,8 +14,8 @@
 .header-main {
   height: 70px;
   width: 100%;
-  position: fixed;
-  top: 0;
+  position: relative; 
+  /* Removed fixed positioning */
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   display: flex;
   align-items: center;
