--- a/pages/Cart/Cart.scss
+++ b/pages/Cart/Cart.scss
@@ -111,7 +111,7 @@
   min-height: 100vh;
   background: #f5f5f5;
   padding: 2rem 1rem;
-  margin-top: 70px;
+
 
   .cart-container {
     max-width: 1200px;
@@ -322,6 +322,7 @@
                         color: #000;
                         height: 100%;
                         // Hide spinners
+                        appearance: textfield;
                         -moz-appearance: textfield;
                         &::-webkit-outer-spin-button, &::-webkit-inner-spin-button {
                             -webkit-appearance: none;
