--- a/pages/MyOrders/MyOrders.scss
+++ b/pages/MyOrders/MyOrders.scss
@@ -7,7 +7,7 @@ $white: #ffffff;
 
 .my-orders-page {
   max-width: 1000px;
-  margin: 100px auto 60px; // account for fixed header
+  margin: 2rem auto 60px; // account for fixed header
   padding: 0 20px;
   min-height: 80vh;
   box-sizing: border-box;
