--- a/pages/Product/Product.scss
+++ b/pages/Product/Product.scss
@@ -583,7 +583,7 @@
 @media (max-width: 600px) {
   .product {
     padding: 1.5rem 1rem;
-    padding-top: calc(60px + 1.5rem);
+    padding-top: 1.5rem;
   }
   .product .product-content {
     gap: 1.5rem;
