--- a/pages/MyOrders/MyOrders.scss
+++ b/pages/MyOrders/MyOrders.scss
@@ -6,11 +6,10 @@ $bg-page: #f9fafb;
 $white: #ffffff;
 
 .my-orders-page {
-  max-width: 1000px;
-  margin: 2rem auto 60px; // account for fixed header
-  padding: 0 20px;
-  min-height: 80vh;
-  box-sizing: border-box;
+
+  max-width: 1300px;
+  width: 90%; // Responsive width
+  margin: 2rem auto 60px;
 
   .page-header {
     margin-bottom: 2rem;
